i have successfully complete section 5 which was a bonus task for the assignment. at first the previous section was being overalapped with the new section, then i ve found that the height was fixed, the contents could not fitted in that height. i chnaged the tag to min height to solve the problem.

--- a/style.css
+++ b/style.css
@@ -178,11 +178,12 @@ font-weight: 500;
 
 
 .sec4-the-solution {
+    position: relative;
     display: flex;
-    height: 600px;
+    min-height: 600px;
     width:auto;
-    margin: 0 auto;
-    gap: 20px;           
+    gap: 20px; 
+    margin-bottom: 20px;          
 }
 .sec4-h4 {
     color: rgb(13, 140, 51);
@@ -199,6 +200,9 @@ font-weight: 500;
     margin-bottom: 75px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
     border-radius: 12px;
+}
+.p-in-sec4 {
+    margin-right: 60px;
 }
 .sec4-lines-with-small-icons {
     display: flex;
@@ -221,3 +225,27 @@ font-weight: 500;
     font-size: 48px;
 }
 
+.sec5 {
+    background-color: rgb(240, 248, 255);
+    padding: 40px 20px;
+    text-align: center;
+    margin-left: 50px;
+    margin-right: 50px;
+    border-radius: 12px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.568);
+} 
+.button-sec5 {
+    background-color: rgb(13, 140, 51);
+    color: white;
+    padding: 7px 15px;
+    border: none;
+    border-radius: 4px;
+    font-size: 16px;
+    text-decoration: none;
+    opacity: 0.8;
+    margin-top: 10px;
+}
+.right-arrow {
+    margin-left: 8px;
+    vertical-align: middle;
+}
